remove unused elements

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1341,6 +1341,12 @@
       }
     }
   }
+  .grid-item-main {
+    width: 44.7%;
+  }
+  .filter-item-space {
+    margin: 15px 0;
+  }
 }
 
 @media only screen and (max-width: 424.98px) {
